--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <h1>Orlin is the new Hero.</h1>
   <h1>This is a Heading</h1>
   <p>This is a paragraph.</p>
+  <h2> This is a test paragraph.</h2>
   
 </body>
 </html>
